cmd/samples/pageflow/src/server/errors/NameExistsError.js
class NameExistsError extends Error {
  constructor(name) {
    super();
    this.status = 400;
    this.message = `Product name '${name}' already exists.`
    this.name = 'NameExistsError';
  }
}

export default NameExistsError;
